fixed: scrollbar Chrome, Safari

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -13,7 +13,7 @@ body {
     background: var(--background-color);
     display: flex;
     justify-content: center;
-    scrollbar-width: none;
+    scrollbar-width: 0;
 }
 
 body::-webkit-scrollbar {
